# openstack-puppet-modules

./: .fixtures.yml  .fog.enc  .gemfile  .gitignore  .gitmodules  .gitreview  .kitchen.yml  .metadata.json  .project  .puppet-lint.rc  .travis.sh  .travis.yaml  .travis.yml  BUILDING.md  CHANGELOG  CHANGELOG.md  CONTRIBUTING.markdown  CONTRIBUTING.md  CONTRIBUTORS  Changes  Gemfile  LICENSE  Modulefile  NOTES.md  Puppetfile  README  README.markdown  README.md  Rakefile  TODO.md  Vagrantfile  groups  index.html  metadata.json  params.json  project.config  secrets.tar.enc  travis.pem.enc
pacemaker/: .fixtures.yml  .gitignore  .gitreview  .rubocop.yml  Gemfile  Modulefile  README.md  Rakefile  TODO.md  metadata.json  setup.cfg
pacemaker/agent_generator/: agent_generator.rb  generate_manifests.sh  update_sources.sh  variables.sh
pacemaker/agent_generator/src_xml/: fence_apc.xml  fence_apc_snmp.xml  fence_bladecenter.xml  fence_brocade.xml  fence_cisco_mds.xml  fence_cisco_ucs.xml  fence_drac5.xml  fence_eaton_snmp.xml  fence_eps.xml  fence_hpblade.xml  fence_ibmblade.xml  fence_idrac.xml  fence_ifmib.xml  fence_ilo.xml  fence_ilo2.xml  fence_ilo3.xml  fence_ilo4.xml  fence_ilo_mp.xml  fence_imm.xml  fence_intelmodular.xml  fence_ipdu.xml  fence_ipmilan.xml  (+7 more)
pacemaker/manifests/: contain.pp  corosync.pp  init.pp  install.pp  new.pp  params.pp  property.pp  resource_defaults.pp  service.pp  stonith.pp
pacemaker/spec/: shared_examples.rb  spec_helper.rb  spec_helper_acceptance.rb
pacemaker/templates/: corosync.conf.erb  ocf_handler.sh.erb
pacemaker/tests/: init.pp
(+2041 files in other folders)
