[metadata]
name = puppet-pacemaker
summary = Puppet module for Pacemaker
description-file =
    README.md
author = Mirantis, Red-Hat and OpenStack Contributors
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
